@@ -3,6 +3,10 @@ Revision history for Perl extension IPC::System::Simple.
         * TEST: t/win32.t has more sane handling of skipped and
           unimplimented tests.
 
+        * BUGFIX: capture/capturex no longer break STDOUT when
+          running an unknown command under Windows.  Many thanks
+          to Jan Krynicky for a fix.  (RT #48319)
+
 1.20  Sat Jan  9 15:08:41 AUSEST 2010
 
         * TEST: t/win32.t no longer claims to have more tests than
